--- a/FIWXDX_0917/FIWXDX_XY.html
+++ b/FIWXDX_0917/FIWXDX_XY.html
@@ -5,6 +5,55 @@
     <title>FIWXDX - Juhász Balázs FIWXDX_XY</title>
 </head>
 <body>
-    
+     <h3 style="color: red;"><b>SZÓKIRAKÓ JÁTÉK</b></h3>
+    <p>
+        <i>Adott egy 4*9 négyzetháló.</i> A <b>program</b> megad egy - a négyzetháló feletti képhez kapcsolódó - szót
+        vagy mondatot, majd ennek betűit <span style="color:cornflowerblue">összekeverve</span> elhelyezi a
+        négyzethálóban.
+    </p>
+    <p>
+    <h2 style="text-align: center;">A játékos feladata az, hogy az összekevert betűkből kirakja a szót</h2>
+    </p>
+    <p style="text-align: center;">
+        vagy mondatot a kijelölt helyen. <u>A betűket vízszintes vagy függőleges irányban egyenként lehet mozgatni.</u>
+    </p>
+    <p style="text-align: center;">
+        Ha a betű útját elállja egy másik betű, akkor az csak a másik betűig tolódik el.
+    </p>
+    <p>
+        Miután sikerült a betűket amegfelelő helyre mozgatni, a program ezt jelzi, ha viszont valamely betűket
+        felcseréltük,
+        <span> akkor azokra <i>színkkiemeléssel hívja fel </i>a <span style="color: yellow;">figyelmünket.</span>
+    </p>
+    <p>
+    <h3>
+        <span style="color: red;">
+            Derékszögű háromszögben igaz a Pitagorasz tétele:
+        </span>
+        <br>
+        <div>
+            <span style="color: red;">
+                a<sup>2</sup>
+            </span>
+            +
+            <span style="color:cornflowerblue;">
+                b<sup>2</sup>
+            </span>
+            =
+            <span style="color: greenyellow;">
+                c<sup>2</sup>
+            </span>
+        </div>
+        <p>
+            <span style="color: cornflowerblue;">
+                Általános háromszögek esetén is igaz:
+            </span>
+            <br>
+            <span style="color: green;">
+                α + β + γ = 180<sup>ο</sup>
+            </span>
+        </p>
+    </h3>
+    </p>
 </body>
 </html>
