--- a/FIWXDX_1015/FIWXDX_tablazat.html
+++ b/FIWXDX_1015/FIWXDX_tablazat.html
@@ -6,37 +6,34 @@
     <link rel="stylesheet" href="FIWXDX_table.css">
 </head>
 <body>
-    <h1>Táblázat készítése,formázása</h1>
     <table>
-        <caption>
-            <h2>Táblázat elemei</h2>
-        </caption>
-        <tr style="background-color: gainsboro;">
-            <td>1. oszlop fejléc</td>
-            <td>2. oszlop fejléc</td>
-            <td>3. oszlop fejléc</td>
-        </tr>
-        <th>
-            <td>1. sor 1. elem</td>
-            <td>1. sor 2. elem</td>
-            <td>1. sor 3. elem</td>
-        </th>
-        <th>
-            <td>2. sor 1. elem</td>
-            <td>2. sor 2. elem Az ember ősidők óta használ különböző
-                eszközöket, ha úgy tetszik, számológépeket földi
-                javai számbavételéhez, a mennyiségekkel végzett
-                kalkulusok gyorsabb, pontosabb, kevesebb emberi
-                munkát igénylő végrehajtásához.
-            </td>
-            <td>2. sor 3. elem</td>
-        </th>
-        <th>
-            <td>3. sor 1. elem</td>
-            <td>3. sor 2. elem</td>
-            <td>3. sor 3. elem</td>
-        </th>
-
+        <caption>Táblázat készítése, formázása</caption>
+        <caption>Táblázat elemei</caption>
+        <thead>
+            <tr>
+                <th>1. oszlop fejlec</th>
+                <th>2. oszlop fejlec</th>
+                <th>3. oszlop fejlec</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1. sor 1. elem</td>
+                <td>1. sor 2. elem</td>
+                <td>1. sor 3. elem</td>
+            </tr>
+            <tr>
+                <td>2. sor 1. elem</td>
+                <td>2. sor 2. elem Az ember ősidők óta használ különböző eszközöket, ha úgy tetszik, számológépeket földi javai számbavételéhez, a mennyiségekkel végzett kalkulációk gyorsabb, pontosabb, kevesebb emberi munkát igénylő végrehajtásához.</td>
+                <td>2. sor 3. elem</td>
+            </tr>
+            <tr>
+                <td>3. sor 1. elem</td>
+                <td>3. sor 2. elem</td>
+                <td>3. sor 3. elem</td>
+            </tr>
+        </tbody>
     </table>
+    
 </body>
 </html>
